# dotfiles

./: .gitignore  .zshrc  CMakeLists.txt  README.md  childs.ps1  deploy.sh  egoista.zsh-theme  fetch.sh  init.vim  latexdocker.cmd  log.js  package.json  py.sh  tslint.yaml
.config/conky/: conky.conf
.scripts/: dl.sh  ml.sh  rollback.sh  update.sh
CMake/: CMakeLists.txt  CMakeSettings.json
PowerShell/: egoista.psm1  profile.ps1
PowerShell/Modules/posh-git/1.0.0/: PSGetModuleInfo.xml
Scripts/: ETH-ethermine.bat  childs.ps1  readPDF.py  spot.py
alacritty/: alacritty.toml
ashell/: config.toml
btrfs/: rollback.sh  update.sh
conky/: conky.conf
docs/: index.html  index.md  pages.json  vim_cheatsheet.html  vim_cheatsheet.md
docs/theme/: styles.css  template.js
grafana/: Cadvisor exporter-1653177992640.json  Docker and OS Metrics-1653177960318.json  Node Exporter Full-1653177999437.json
graft/: config.toml
hypr/: alacritty-cwd.sh  hypridle.conf  hyprland.conf  hyprlock.conf  hyprpaper.conf  start-nextcloud.sh  start-tutanota.sh
linux/zsh/: .zshrc
nvim/: coc-settings.json  coc.vim  init.lua  init.vim  keybinds.vim  lazy-lock.json  plugins.vim  pok3r.vim  settings.vim
nvim/lua/config/: init.lua  init_lazy.lua  remap.lua  set.lua  theme.lua
nvim/lua/config/lazy/: completion.lua  copilot.lua  devcontainer.lua  gitsigns.lua  init.lua  lsp.lua  neogit.lua  obsidian.lua  telescope.lua  which-key.lua  (+1 more)
themes/: egoista-sweet.zsh-theme
tmux/: rename_format.sh  tmux.conf
wofi/: config  style.css
wofi/themes/: papercolor_light.css
wt/: settings.json
